--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:file:~/h2/app_db
+    url: jdbc:h2:file:~/h2/app_db_test
     username: sa
     password: sa
 
