--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  security:
+    user:
+      name: sa
+      password: sa
+
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:file:~/h2/app_db
